fix: Added more space and fixed center alignment of upload buttons [PT-185462804]

--- a/packages/labbook/src/components/upload-button.scss
+++ b/packages/labbook/src/components/upload-button.scss
@@ -14,10 +14,11 @@
 
 .upload-button {
   width: fit-content;
-  min-width: 160px;
+  min-width: 180px;
   min-height: 41px;
   display: flex;
   align-items: center;
+  justify-content: center;
   margin: 5px 10px;
   padding: 1px 2px;
   border-radius: 4px;
